<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title">TipSter</string>
    <string name="view_percentage">Percentage Tip 0%</string>
    <string name="tip_amount">Tip: £0</string>
    <string name="calc_button">Calculate Tip</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="defaultPeople">1</string>
    <string name="billRequest">Bill Value:</string>
    <string name="costEach">Cost per person:</string>
    <string name="defaultTotalCost">Total Cost: £0</string>
    <string name="defaultCostEach">Cost Each: £0</string>
    <string name="rounder">Auto Round</string>
    <string name="billPrompt">Enter Bill Amount Here:</string>
    <string name="peoplePrompt">People:</string>

</resources>
