<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textViewPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/seekBar1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/view_percentage"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/peopleDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTipValue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/defaultPeople"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ToggleButton
        android:id="@+id/rndToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onToggleClicked"
        android:text="@string/rounder" />

    <EditText
        android:id="@+id/billValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/billPrompt"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewTipValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/rndToggle"
        android:layout_below="@+id/billValue"
        android:layout_marginTop="46dp"
        android:text="@string/tip_amount"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/bSub"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/peopleDisplay"
        android:layout_alignBottom="@+id/peopleDisplay"
        android:layout_toLeftOf="@+id/rndToggle"
        android:onClick="onClickBtn"
        android:text="@string/sub" />

    <Button
        android:id="@+id/bAdd"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/peopleDisplay"
        android:layout_alignBottom="@+id/peopleDisplay"
        android:layout_toRightOf="@+id/textViewTipValue"
        android:onClick="onClickBtn"
        android:text="@string/add" />

    <TextView
        android:id="@+id/totalCostV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/defaultTotalCost"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/costPerPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/totalCostV"
        android:layout_centerHorizontal="true"
        android:text="@string/defaultCostEach"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rndToggle"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="37dp"
        android:max="40" />

</RelativeLayout>